--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CAQRA</title>
+    <title>Caqra ERP - Sistem ERP Terintegrasi untuk Bisnis Modern</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="caqra,erp,sistem,aplikasi" name="keywords">
-    <meta content="Integrasikan seluruh proses bisnis anda dalam satu aplikasi dengan CAQRA." name="description">
+    <meta name="description" content="Caqra adalah sistem ERP lengkap yang menyatukan berbagai fungsi bisnis seperti keuangan, inventori, produksi, dan SDM dalam satu platform terintegrasi. Tingkatkan efisiensi dan visibilitas bisnis Anda dengan solusi Caqra.">
+    <meta property="og:title" content="Caqra ERP - Sistem ERP Terpadu untuk Bisnis">
+    <meta property="og:description" content="Caqra menyederhanakan proses bisnis Anda dengan sistem ERP terintegrasi untuk keuangan, inventori, SDM, dan lainnya.">
+    <meta property="og:image" content="https://yourdomain.com/images/caqra-logo.png">
+    <meta property="og:url" content="https://caqra.com">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Caqra ERP - Solusi ERP Lengkap dan Terintegrasi">
+    <meta name="twitter:description" content="Gunakan Caqra untuk mengelola semua fungsi bisnis dalam satu platform ERP modern dan saling terhubung.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/caqra-logo.png">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -46,12 +56,12 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <h2 class="text-white fw-bold m-0">WELDORK</h2>
+                    <h2 class="text-white fw-bold m-0">CAQRA</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
-                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Pekanbaru</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>caqra.official@gmail.com</small>
+                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>0852-6524-1314</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
                                 class="fab fa-facebook-f"></i></a>
@@ -72,7 +82,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="index.html" class="navbar-brand d-lg-none">
-                    <h1 class="fw-bold m-0">WELDORK</h1>
+                    <h1 class="fw-bold m-0">CAQRA</h1>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -96,7 +106,7 @@
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="" class="btn btn-primary py-2 px-3">Get A Quote</a>
+                        <a href="" class="btn btn-primary py-2 px-3">Daftar sekarang</a>
                     </div>
                 </div>
             </nav>
@@ -124,9 +134,9 @@
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption">
-                        <h1 class="display-1 text-uppercase text-white mb-4 animated zoomIn">Best Metalcraft Solutions
+                        <h1 class="display-1 text-uppercase text-white mb-4 animated zoomIn">Best ERP Solutions
                         </h1>
-                        <a href="#" class="btn btn-primary py-3 px-4">Explore More</a>
+                        <a href="#" class="btn btn-primary py-3 px-4">Daftar sekarang</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -134,7 +144,7 @@
                     <div class="carousel-caption">
                         <h1 class="display-1 text-uppercase text-white mb-4 animated zoomIn">Best Metalcraft Solutions
                         </h1>
-                        <a href="#" class="btn btn-primary py-3 px-4">Explore More</a>
+                        <a href="#" class="btn btn-primary py-3 px-4">Daftar sekarang</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -142,7 +152,7 @@
                     <div class="carousel-caption">
                         <h1 class="display-1 text-uppercase text-white mb-4 animated zoomIn">Best Metalcraft Solutions
                         </h1>
-                        <a href="#" class="btn btn-primary py-3 px-4">Explore More</a>
+                        <a href="#" class="btn btn-primary py-3 px-4">Daftar sekarang</a>
                     </div>
                 </div>
             </div>
@@ -209,7 +219,7 @@
                             <i class="fa fa-hammer fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase mb-3">Quality Welding</h5>
+                            <h5 class="text-uppercase mb-3">PEMBELIAN</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -223,7 +233,7 @@
                             <i class="fa fa-dollar-sign fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Affordable Pricing</h5>
+                            <h5 class="text-uppercase">PERSEDIAAN</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -237,7 +247,7 @@
                             <i class="fa fa-check-double fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Best Welder</h5>
+                            <h5 class="text-uppercase">PENJUALAN</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -251,7 +261,7 @@
                             <i class="fa fa-tools fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Quality Tools</h5>
+                            <h5 class="text-uppercase">KEUANGAN</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
