--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="https://yourdomain.com/images/caqra-logo.png">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
